# eigenvalue-problems

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  main  main.cpp
doc/: CMakeLists.txt  Doxyfile  doxygen-style.css  mainpage.dox
doc/html/: _abstract_iterative_solver_8cpp.html  _abstract_iterative_solver_8cpp__incl.map  _abstract_iterative_solver_8cpp__incl.md5  _abstract_iterative_solver_8cpp_source.html  _abstract_iterative_solver_8hpp.html  _abstract_iterative_solver_8hpp__dep__incl.map  _abstract_iterative_solver_8hpp__dep__incl.md5  _abstract_iterative_solver_8hpp__incl.map  _abstract_iterative_solver_8hpp__incl.md5  _abstract_iterative_solver_8hpp_source.html  _config_8cpp.html  _config_8cpp__incl.map  _config_8cpp__incl.md5  _config_8cpp_a9bacca6933d28b5825c66a035de714bc.html  _config_8cpp_source.html  _config_8hpp.html  _config_8hpp__dep__incl.map  _config_8hpp__dep__incl.md5  _config_8hpp__incl.map  _config_8hpp__incl.md5  _config_8hpp_a9bacca6933d28b5825c66a035de714bc.html  _config_8hpp_source.html  _file_reader_8hpp.html  _file_reader_8hpp__dep__incl.map  _file_reader_8hpp__dep__incl.md5  _file_reader_8hpp__incl.map  _file_reader_8hpp__incl.md5  _file_reader_8hpp_source.html  _file_reader_c_s_v_8cpp.html  _file_reader_c_s_v_8cpp__incl.map  _file_reader_c_s_v_8cpp__incl.md5  _file_reader_c_s_v_8cpp_source.html  _file_reader_c_s_v_8hpp.html  _file_reader_c_s_v_8hpp__dep__incl.map  _file_reader_c_s_v_8hpp__dep__incl.md5  _file_reader_c_s_v_8hpp__incl.map  _file_reader_c_s_v_8hpp__incl.md5  _file_reader_c_s_v_8hpp_source.html  _file_reader_m_t_x_8cpp.html  _file_reader_m_t_x_8cpp__incl.map  (+350 more)
doc/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+16 more)
include/: AbstractIterativeSolver.hpp  Config.hpp  FileReader.hpp  FileReaderCSV.hpp  FileReaderMTX.hpp  FileReaderTXT.hpp  FunctionManager.hpp  InversePowerMethodSolver.hpp  MatrixGenerator.hpp  MatrixGeneratorFactory.hpp  MatrixGeneratorFromFile.hpp  MatrixGeneratorFromFunction.hpp  OutputGenerator.hpp  PowerMethodSolver.hpp  QrMethodSolver.hpp  SolverFactory.hpp  constants.hpp
input/: input.yaml
input/matrices/: B.mtx
lib/: CMakeLists.txt
output/: output.txt
src/: AbstractIterativeSolver.cpp  AbstractIterativeSolver.hpp  FileReader.hpp  FileReaderCSV.cpp  FileReaderCSV.hpp  FileReaderMTX.cpp  FileReaderMTX.hpp  FileReaderTXT.cpp  FileReaderTXT.hpp  FunctionManager.cpp  FunctionManager.hpp  InversePowerMethodSolver.cpp  InversePowerMethodSolver.hpp  InversePowerMethodSolverShift.cpp  InversePowerMethodSolverShift.hpp  MatrixGenerator.hpp  MatrixGeneratorFactory.cpp  MatrixGeneratorFactory.hpp  MatrixGeneratorFromFile.cpp  MatrixGeneratorFromFile.hpp  MatrixGeneratorFromFunction.cpp  MatrixGeneratorFromFunction.hpp  OutputGenerator.cpp  OutputGenerator.hpp  PowerMethodSolver.cpp  PowerMethodSolver.hpp  PowerMethodSolverShift.cpp  PowerMethodSolverShift.hpp  QrMethodSolver.cpp  QrMethodSolver.hpp  SolverFactory.cpp  config.cpp  config.hpp  constants.hpp  main.cpp  mainpage.dox  test_class.cpp  test_class.hpp
tests/: CmakeLists.txt  test_example.cpp  tests_matrix_generation.cpp  tests_solver_methods.cpp  tests_user_input_parsing.cpp
